# hybrid_tasks

./: .gitignore  .gitmodules  README.md  pyproject.toml
deploy/: QP_controller.py  README.md  main.py  robot_env.py  simple_controller.py  utils.py
deploy/mujoco/: config.py  unitree_mujoco.py  unitree_sdk2py_bridge.py
hybrid_tasks/assets/robots/: __init__.py
hybrid_tasks/assets/robots/unitree_g1/: custom_actuator.py  g1_23dof_constants.py  g1_constants.py  g1_constants_custom.py
hybrid_tasks/assets/robots/unitree_g1/xmls/: g1_with_motors.xml
hybrid_tasks/tasks/velocity/: custom_residual_action.py  qp.py  vanlilla_walk_flat.py  velocity_env_cfg.py
hybrid_tasks/tasks/velocity/config/g1/: __init__.py  env_cfgs.py  env_cfgs_custom.py  rl_cfgs_custom.py
hybrid_tasks/tasks/velocity/config/g1_23dof/: __init__.py  env_cfgs.py
hybrid_tasks/tasks/velocity/mdp/: observations.py  rewards.py
scripts/: csv_to_npz.py  list_envs.py  play.py  train.py
