[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid_tasks"
version = "1.0.0"

keywords = ["Hybrid control"]
maintainers = [
  { name="Gleb Stoyko", email="stojko.g@yandex.ru" },
]
authors = [
]
description = "Hybrid tasks for mjlab"
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "BSD-3-Clause" }

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mjlab==1.3.0",
    "rsl-rl-lib==5.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hybrid_tasks*"]

[tool.isort]

py_version = 38
line_length = 120
group_by_package = true

# Files to skip
skip_glob = [".vscode/*"]

# Order of imports
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]

# Extra standard libraries considered as part of python (permissive licenses)
extra_standard_library = [
    "numpy",
    "torch",
    "tensordict",
    "warp",
    "typing_extensions",
    "git",
]
# Imports from this repository
known_first_party = "hybrid_tasks"

[tool.pyright]

include = ["hybrid_tasks"]

typeCheckingMode = "basic"
pythonVersion = "3.10"
pythonPlatform = "Linux"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download the module (i.e. numpy, torch, prettytable)
# Therefore, we have to ignore missing imports
reportMissingImports = "none"
# This is required to ignore for type checks of modules with stubs missing.
reportMissingModuleSource = "none" # -> most common: prettytable in mdp managers

reportGeneralTypeIssues = "none"       # -> raises 218 errors (usage of literal MISSING in dataclasses)
reportOptionalMemberAccess = "warning" # -> raises 8 errors
reportPrivateUsage = "warning"
